--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<tr>
+			<th>Roll number</th>
+			<th>Name</th>
+		</tr>
+		<tr>
+			<td>01</td>
+			<td>Rahul</td>
+		</tr>
+		<tr>
+			<td>02</td>
+			<td>Pramod</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
