--- a/main.html
+++ b/main.html
@@ -3,6 +3,11 @@
 <html>
 
 <head>
+	<style>
+        table,td,tr,th{
+            border: 1px solid black;
+        }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
