--- a/main.html
+++ b/main.html
@@ -14,10 +14,13 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
+		<thead>
 		<tr>
 			<th>Roll number</th>
 			<th>Name</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>01</td>
 			<td>Rahul</td>
@@ -26,6 +29,7 @@
 			<td>02</td>
 			<td>Pramod</td>
 		</tr>
+		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
